--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://bitcoinbuildersf.github.io/BitcoinBuilderSF/"
+base_url = "https://dladowitz.github.io/BuilderMars/"
 compile_sass = false
 build_search_index = false
 generate_feeds = true
